# poke_app-crud

./: .gitignore  README.md  pokemon.db  pyproject.toml
